--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@xyflow/react": "^12.10.0",
     "allotment": "^1.20.5",
     "dagre": "^0.8.5",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^16.5.4",
     "recast": "^0.23.11",
     "zustand": "^5.0.10"
   },
