--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.563.0",
     "monaco-editor": "^0.55.1",
+    "node-pty": "^1.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^16.5.4",
     "recast": "^0.23.11",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
