--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "dist/electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && tsc -p tsconfig.electron.json",
+    "build": "tsc && vite build && tsc -p tsconfig.electron.json && cp electron/package.json dist/electron/package.json",
     "start": "electron .",
-    "electron:dev": "concurrently -k \"cross-env VITE_CJS_IGNORE_WARNING=true BROWSER=none npm run dev\" \"wait-on tcp:5173 && tsc -p tsconfig.electron.json && electron .\"",
+    "electron:dev": "concurrently -k \"cross-env VITE_CJS_IGNORE_WARNING=true BROWSER=none npm run dev\" \"wait-on tcp:5173 && tsc -p tsconfig.electron.json && mkdir -p dist/electron && cp electron/package.json dist/electron/package.json && electron .\"",
     "electron:build": "npm run build && electron-builder",
     "lint": "eslint ."
   },
