--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@xyflow/react": "^12.10.0",
     "allotment": "^1.20.5",
     "dagre": "^0.8.5",
+    "framer-motion": "^12.31.0",
     "i18next": "^25.8.0",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.563.0",
