--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/parser": "^7.28.6",
+    "@babel/traverse": "^7.29.0",
     "@babel/types": "^7.28.6",
     "@monaco-editor/react": "^4.7.0",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
