--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/parser": "^7.28.6",
     "@babel/traverse": "^7.29.0",
     "@babel/types": "^7.28.6",
+    "@modelcontextprotocol/sdk": "^1.26.0",
     "@monaco-editor/react": "^4.7.0",
     "@types/react-virtualized-auto-sizer": "^1.0.4",
     "@types/react-window": "^1.8.8",
