--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "js-blueprints-electron",
-  "version": "1.0.0",
+  "version": "0.5.0",
   "type": "module",
   "description": "",
   "main": "dist/electron/main.js",
@@ -12,7 +12,10 @@
     "electron:build": "npm run build && electron-builder",
     "lint": "eslint .",
     "test": "vitest run",
-    "security-audit": "npm audit"
+    "security-audit": "npm audit",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:patch": "standard-version --release-as patch"
   },
   "keywords": [],
   "author": "",
@@ -67,6 +70,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "jsdom": "^28.0.0",
+    "standard-version": "^9.5.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.46.4",
     "vite": "^5.3.1",
