style: neutralize git panel colors and align with app theme
- Updated Git panel background to use neutral grays (matching SidebarPanel)
- Changed selection highlight color from Blue to Emerald
- Refined status dots (Staged: Emerald, Modified: Amber)
- Neutralized Section Headers and Commit Type buttons
- Updated Commit button to use Emerald accent
- Improved file selection feedback in FileTreeView
- Added file existence check in GitDiffEditor to prevent errors
- Fixed inconsistent blue tones in empty state text and badges

--- a/tsconfig.electron.json
+++ b/tsconfig.electron.json
@@ -17,7 +17,10 @@
     "isolatedModules": true,
     "noEmit": false,
     "outDir": "dist/electron",
-    "rootDir": "electron"
+    "rootDir": "electron",
+    "types": [
+      "node"
+    ]
   },
   "include": [
     "electron"
