--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "dist/electron/main.js",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build && tsc -p tsconfig.electron.json && shx mkdir -p dist/electron && shx cp electron/package.json dist/electron/package.json && shx cp -r electron/runners dist/electron/",
+    "build": "tsc && vite build && tsc -p tsconfig.electron.json && shx mkdir -p dist/electron && shx cp electron/package.json dist/electron/package.json && shx cp -r electron/runners dist/electron/ && shx cp -r electron/workers dist/electron/",
     "start": "electron .",
-    "electron:dev": "concurrently -k \"cross-env VITE_CJS_IGNORE_WARNING=true BROWSER=none npm run dev\" \"wait-on tcp:5173 && tsc -p tsconfig.electron.json && shx mkdir -p dist/electron && shx cp electron/package.json dist/electron/package.json && shx cp -r electron/runners dist/electron/ && electron .\"",
+    "electron:dev": "concurrently -k \"cross-env VITE_CJS_IGNORE_WARNING=true BROWSER=none npm run dev\" \"wait-on tcp:5173 && tsc -p tsconfig.electron.json && shx mkdir -p dist/electron && shx cp electron/package.json dist/electron/package.json && shx cp -r electron/runners dist/electron/ && shx cp -r electron/workers dist/electron/ && electron .\"",
     "electron:build": "npm run build && electron-builder",
     "lint": "eslint .",
     "test": "vitest run",
