--- a/.gitignore
+++ b/.gitignore
@@ -74,8 +74,7 @@ __pycache__
 # MCP & Agent
 state.json
 **/node_modules/
-.agent/state/
-.agent/logs/
+.agent/
 
 # Compiled artifacts in source
 src/**/*.js
